# FastAPI-Backend-Of-Chat-System-PoC

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  cache.py  db.py  deps.py  main.py  models.py  repositories.py  schemas.py  security.py  services.py  settings.py
app/routers/: auth.py  messages.py
tests/: conftest.py  test_login.py  test_messages.py  test_register.py  test_send.py
