[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = "FastAPI chat microservice (PoC)"
authors = ["Mohamed Hany <mohamed.hany182@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.11.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
redis = "^6.4.0"
pydantic = {extras = ["email"], version = "^2.11.9"}
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
mypy = "^1.18.2"
pytest = "^8.4.2"
httpx = "^0.28.1"
types-redis = "^4.6.0.20241004"
types-python-jose = "^3.5.0.20250531"
types-passlib = "^1.7.7.20250602"

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.(py|pyi)$"
exclude = "(dist|build|\\.venv|venv|\\.mypy_cache|\\.pytest_cache)"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = ["venv", ".venv", "build", "dist"]
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.poetry.scripts]
chat-service = "app.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
